elg_one_bri/slurm-14740105.out
  File "./slurm_test_init.sh", line 4
    export PYTHONPATH=$CSCRATCH_OBIWAN/obiwan_code/py:$CSCRATCH_OBIWAN/legacypipe/py:$PYTHONPATH  
                    ^
SyntaxError: invalid syntax
